# china_unicom_oxidebot

./: .gitignore  Cargo.toml  Readme.md
src/: cli.rs  lib.rs
src/migration/: add_token_online_and_app_id_to_config_table.rs  create_config_table.rs  create_daily_table.rs  create_last_table.rs  create_today_table.rs  create_yesterday_table.rs  mod.rs
src/model/: config.rs  daily.rs  last.rs  mod.rs  today.rs  yesterday.rs
src/utils/: china_unicom.rs  db.rs  mod.rs  option_t.rs  oxidebot_util.rs
